SExtractor bug workaround

--- a/superbit_lensing/medsmaker/superbit/astro_config/hc_config.yaml
+++ b/superbit_lensing/medsmaker/superbit/astro_config/hc_config.yaml
@@ -4,6 +4,6 @@ n_neighbors: 5 # Number of nearest neighbors to query
 
 # Modes of SExtractor to run (hot, cold, and/or default)
 modes: 
-  - hot
-  - cold
-#  - default
+#  - hot
+#  - cold
+  - default
